--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "homepage": "https://github.com/infusion/Kalman.js",
     "bugs": "https://github.com/infusion/Kalman.js/issues",
     "description": "A kalman filter library",
-    "keywords": ["kalman filter", "kalman", "filter"],
+    "keywords": ["kalman filter", "kalman", "filter", "noise"],
     "author": "Robert Eisele <robert@xarg.org> (http://www.xarg.org/)",
     "main": "kalman",
     "readmeFilename": "README.md",
