--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,11 @@
     "keywords": [
         "kalman filter", "kalman", "filter", "noise"
     ],
+    "moduleType": [
+      "amd",
+      "globals",
+      "node"
+    ],
     "authors": [
         "Robert Eisele <robert@xarg.org> (http://www.xarg.org/)"
     ],
